When running smb-csi-driver tests make the verion of k8s configurable
[#171631560](https://www.pivotaltracker.com/story/show/171631560)

Co-authored-by: Dennis Leon <dleon@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-csi-driver/ci/e2e-tests.yml
+++ b/smb-csi-driver/ci/e2e-tests.yml
@@ -13,3 +13,6 @@ inputs:
 run:
   path: make
   args: [ "--keep-going", "--directory=smb-volume-k8s-release/smb-csi-driver", "start-docker", "e2e", "kill-docker" ]
+
+params:
+  K8S_IMAGE: kindest/node:v1.17.0
