Add CI task to output go version used by kpack image to a file
[#171607702](https://www.pivotaltracker.com/story/show/171607702)
Authored-by: Lisa Burns <lcho@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -12,7 +12,7 @@ test:
 	ulimit -n 10000 && ulimit -a && GO111MODULE=off go get github.com/onsi/ginkgo/ginkgo && GO111MODULE=on ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1
 
 extract-go-version:
-	pack inspect-image cfpersi/smb-broker --bom | jq -r '.remote[0].version' > /tmp/version
+	pack inspect-image cfpersi/smb-broker --bom | jq -r '.remote[0].metadata.uri' > /tmp/version
 
 fmt:
 	go fmt ./...
