Build docker image for testing based on contents of a file
- File will be changed by extracting go version from kpack
[#171607702](https://www.pivotaltracker.com/story/show/171607702)

Authored-by: Lisa Burns <lcho@pivotal.io>

--- a/ci/dockerfiles/tests/Dockerfile
+++ b/ci/dockerfiles/tests/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get install -y --no-install-recommends \
   iproute2 \
   openssh-client \
   software-properties-common \
+  jq \
   libpq-dev
 
 # ruby-install dependencies
@@ -22,8 +23,12 @@ RUN apt-get install -y \
   libncurses5-dev \
   libffi-dev
 
-COPY --from=golang:1 /usr/local/go /usr/local/go
-ENV GOROOT=/usr/local/go PATH=/usr/local/go/bin:$PATH
+ADD go-version /tmp/go-version
+RUN wget $(cat /tmp/go-version) -O /tmp/golang-linux.tar.gz
+RUN tar -xvf /tmp/golang-linux.tar.gz
+RUN mv bin/go /usr/local/bin
+
+ENV GOROOT=/usr/local/bin PATH=/usr/local/go/bin:$PATH
 
 RUN apt-get update && apt-get install -y apt-transport-https
 RUN curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add -
@@ -47,7 +52,6 @@ RUN /tmp/install-docker.sh
 COPY start-docker.sh /usr/local/bin/start-docker
 RUN chmod +x /usr/local/bin/start-docker
 
-RUN apt-get update && apt-get install -y wget && apt-get install -y jq
 RUN wget https://github.com/buildpacks/pack/releases/download/v0.9.0/pack-v0.9.0-linux.tgz
 RUN tar xvf pack-v0.9.0-linux.tgz
 RUN mv ./pack /usr/local/bin
