Reduce the permissions set on the smb-plugin
- hostnetwork isn't required as communication is done via a shared unix socket

[#171388846](https://www.pivotaltracker.com/story/show/171388846)

Co-authored-by: Dennis Leon <leonde@vmware.com>
Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>

--- a/smb-csi-driver/base/csi-nodeplugin-smbplugin.yaml
+++ b/smb-csi-driver/base/csi-nodeplugin-smbplugin.yaml
@@ -20,7 +20,8 @@ spec:
       labels:
         app: csi-nodeplugin-smbplugin
     spec:
-      hostNetwork: true
+      automountServiceAccountToken: false
+      hostNetwork: false
       containers:
         - name: node-driver-registrar
           image: quay.io/k8scsi/csi-node-driver-registrar:v1.0.2
