Do not assume where the path to ginkgo is
[#171607702](https://www.pivotaltracker.com/story/show/171607702)

Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/integration-tests/Makefile
+++ b/integration-tests/Makefile
@@ -3,7 +3,7 @@ test:
 	make --directory=../smb-broker image-local-registry
 	make --directory=../smb-broker push-local-image-source
 	make --directory=../smb-csi-driver image-local-registry
-	~/go/bin/ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1 .
+	ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1 .
 
 start-docker:
 	start-docker &
