Add github token to authorize the vendor action bot permission to create a PR
[#170881849](https://www.pivotaltracker.com/story/show/170881849)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/.github/workflows/vendor.yml
+++ b/.github/workflows/vendor.yml
@@ -18,18 +18,21 @@ jobs:
       - name: Run smb-broker go-mod-vendor-pr
         uses: DennisDenuto/go-mod-vendor-pr@master
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           git_user_name: GitHub Actions
           git_user_email: cf-volume-services@pivotal.io
           go_mod_directory: ./smb-broker
       - name: Run smb-csi-driver go-mod-vendor-pr
         uses: DennisDenuto/go-mod-vendor-pr@master
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           git_user_name: GitHub Actions
           git_user_email: cf-volume-services@pivotal.io
           go_mod_directory: ./smb-csi-driver
       - name: Run integration-tests go-mod-vendor-pr
         uses: DennisDenuto/go-mod-vendor-pr@master
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           git_user_name: GitHub Actions
           git_user_email: cf-volume-services@pivotal.io
           go_mod_directory: ./integration-tests
