--- a/smb-broker/helm/values.yaml
+++ b/smb-broker/helm/values.yaml
@@ -21,14 +21,14 @@ service:
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
     ingress.kubernetes.io/rewrite-target: /
   hosts:
-    - host: "smb-broker-dev.app.cf.ephemeral-eirini-gke-2.cf-app.com"
-      paths:
-      - "/v2"
+  - host: "localhost"
+    paths:
+    - "/v2"
 
   tls: []
   #  - secretName: chart-example-tls
