Convert smb-broker ingress from helm to ytt
[#171526740](https://www.pivotaltracker.com/story/show/171526740)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-broker/ytt/values.yaml
+++ b/smb-broker/ytt/values.yaml
@@ -13,3 +13,10 @@ image:
   repository: "cfpersi/smb-broker"
   tag: "latets"
   pullPolicy: Always
+
+ingress:
+  enabled: true
+  hosts:
+    - host: "localhost"
+      paths:
+        - "/v2"
