--- a/ci/dockerfiles/tests/Dockerfile
+++ b/ci/dockerfiles/tests/Dockerfile
@@ -65,4 +65,8 @@ RUN wget https://github.com/k14s/kapp/releases/download/v0.21.0/kapp-linux-amd64
 RUN mv ./kapp-linux-amd64 /usr/local/bin/kapp
 RUN chmod +x /usr/local/bin/kapp
 
+RUN wget https://github.com/k14s/ytt/releases/download/v0.26.0/ytt-linux-amd64
+RUN mv ./ytt-linux-amd64 /usr/local/bin/ytt
+RUN chmod +x /usr/local/bin/ytt
+
 VOLUME /var/lib/docker
