Add make step to deploy a kapp app for smb-csi-driver
[#171526740](https://www.pivotaltracker.com/story/show/171526740)

Authored-by: Dennis Leon <dleon@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -44,11 +44,8 @@ fly:
 fly-e2e:
 	fly -t persi execute -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/e2e-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release
 
-kustomize:
-	@$(MAKE) -f $(THIS_FILE) kustomize-delete || true
-	kubectl apply --kustomize ./overlays/deploy
-
-kustomize-delete:
-	kubectl delete --kustomize ./overlays/deploy
+kapp: SHELL=/bin/bash
+kapp:
+	kapp deploy -y -a smb-broker -f <(ytt -f ytt/base)
 
 .PHONY: test fly fly-e2e image-local-registry
