Build SMB CSI Driver using pack cli
- Passes e2e tests
- pack cli specifies custom run image which has cifs-utils installed

[#171588977](https://www.pivotaltracker.com/story/show/171588977)

Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Dennis Leon <leonde@vmware.com>

--- a/smb-csi-driver/ytt/base/csi-nodeplugin-smbplugin.yaml
+++ b/smb-csi-driver/ytt/base/csi-nodeplugin-smbplugin.yaml
@@ -48,12 +48,14 @@ spec:
         - name: smb
           securityContext:
             privileged: true
+            runAsUser: 0
+            runAsGroup: 0
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
           image: #@ data.values.image.repository + ":" + data.values.image.tag
+          command: ["/layers/org.cloudfoundry.go-mod/app-binary/bin/smb-csi-driver"]
           args :
-            - "/app/main"
             - "--nodeid=$(NODE_ID)"
             - "--endpoint=$(CSI_ENDPOINT)"
           env:
