Fix csi driver makefile kapp deploy
- Otherwise deploying both via make kapp has them overwrite each other

Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -46,6 +46,6 @@ fly-e2e:
 
 kapp: SHELL=/bin/bash
 kapp:
-	kapp deploy -y -a smb-broker -f <(ytt -f ytt/base)
+	kapp deploy -y -a smb-csi-driver -f <(ytt -f ytt/base)
 
 .PHONY: test fly fly-e2e image-local-registry
