Make the smb csi driver app (kapp) use a configurable image
[#171526740](https://www.pivotaltracker.com/story/show/171526740)

Co-authored-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Dennis Leon <leonde@vmware.com>

--- a/eirini-persi/Makefile
+++ b/eirini-persi/Makefile
@@ -1,6 +1,6 @@
-build: SHELL:=/bin/bash
-build:
-	kubectl create namespace eirini
+kapp: SHELL:=/bin/bash
+kapp:
+	kubectl get namespace eirini || kubectl create namespace eirini
 	kapp deploy -y -a eirini-persi -f <(ytt -f ytt/base -f ytt/overlay/ephemeral-env -v namespace=eirini)
 
 delete:
