--- a/smb-broker/Dockerfile
+++ b/smb-broker/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:alpine as builder
 RUN mkdir /app
 ADD . /app/
 WORKDIR /app
-RUN go build -o main -mod=vendor .
+RUN go build -o main .
 
 FROM alpine
 RUN mkdir /app
