Fix documentation around deploying smb-broker
- it deploys smb-broker components in the cf-workloads namespace
- it ensures the username+password are set to match the readme

[#171869721](https://www.pivotaltracker.com/story/show/171869721)

Authored-by: Dennis Leon <leonde@vmware.com>

--- a/smb-broker/ytt/values.yaml
+++ b/smb-broker/ytt/values.yaml
@@ -3,7 +3,7 @@
 smbBrokerUsername: ""
 smbBrokerPassword: ""
 
-namespace: default
+namespace: cf-workloads
 replicaCount: 1
 smbbroker:
   fullname: smb-broker
