--- a/smb-broker/ytt/deployment.yaml
+++ b/smb-broker/ytt/deployment.yaml
@@ -112,3 +112,30 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
+          startupProbe:
+            httpGet:
+              path: /v2/catalog
+              port: 8080
+              httpHeaders:
+                - name: Authorization
+                  value: Basic c21iLWJyb2tlci11c2VybmFtZTpzbWItYnJva2VyLXBhc3N3b3Jk
+            failureThreshold: 20
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /v2/catalog
+              port: 8080
+              httpHeaders:
+                - name: Authorization
+                  value: Basic c21iLWJyb2tlci11c2VybmFtZTpzbWItYnJva2VyLXBhc3N3b3Jk
+            failureThreshold: 20
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /v2/catalog
+              port: 8080
+              httpHeaders:
+                - name: Authorization
+                  value: Basic c21iLWJyb2tlci11c2VybmFtZTpzbWItYnJva2VyLXBhc3N3b3Jk
+            failureThreshold: 20
+            periodSeconds: 10
