Pin docker image tags to alpha versions - refactor smb-csi-driver ytt templates to make base config point to a standard (non test) image
[#171579585](https://www.pivotaltracker.com/story/show/171579585)

Co-authored-by: Dennis Leon <leonde@vmware.com>
Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>

--- a/smb-csi-driver/ytt/base/values.yaml
+++ b/smb-csi-driver/ytt/base/values.yaml
@@ -3,5 +3,5 @@
 namespace: default
 
 image:
-  repository: registry:5000/cfpersi/smb-plugin
-  tag: local-test
+  repository: cfpersi/smb-csi-driver
+  tag: 0.143.0
