Apply minimal necessary permissions to eirini-persi
[#171502086](https://www.pivotaltracker.com/story/show/171502086)
Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/eirini-persi/ytt/base/add_namespace_overlay.yml
+++ b/eirini-persi/ytt/base/add_namespace_overlay.yml
@@ -8,14 +8,14 @@ metadata:
   namespace: #@ data.values.namespace
 
 ---
-#@overlay/match by=overlay.subset({"kind":"ClusterRole"})
+#@overlay/match by=overlay.subset({"kind":"ClusterRole"}),expects="1+"
 ---
 metadata:
   #@overlay/remove
   namespace:
 
 ---
-#@overlay/match by=overlay.subset({"kind":"ClusterRoleBinding"})
+#@overlay/match by=overlay.subset({"kind":"ClusterRoleBinding"}),expects="1+"
 ---
 metadata:
   #@overlay/remove
