--- a/eirini-persi/ytt/base/pods.yaml
+++ b/eirini-persi/ytt/base/pods.yaml
@@ -8,14 +8,20 @@ metadata:
     app.kubernetes.io/name: eirini-persi
   name: eirini-persi
 spec:
-  serviceAccountName: eirini-persi-volume-services
-  automountServiceAccountToken: true
+  automountServiceAccountToken: false
+  volumes:
+    - name: register-secret-volume
+      secret:
+        secretName: eirini-persi-volume-services-register
+    - name: start-secret-volume
+      secret:
+        secretName: eirini-persi-volume-services-start
   containers:
   - image: #@ data.values.image.repository + ":" + data.values.image.tag
     imagePullPolicy: Always
     name: eirini-persi-start
     command: ["/app/main"]
-    args: ["start", "--register", "false"]
+    args: ["start"]
     env:
     - name: OPERATOR_WEBHOOK_HOST
       value: 0.0.0.0
@@ -25,10 +31,15 @@ spec:
       value: "eirini-persi-svc"
     - name: OPERATOR_WEBHOOK_NAMESPACE
       value: "eirini"
+    - name: EIRINI_EXTENSION_REGISTER
+      value: "false"
     ports:
     - containerPort: 443
       name: http
       protocol: TCP
+    volumeMounts:
+      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+        name: start-secret-volume
   initContainers:
   - image: #@ data.values.image.repository + ":" + data.values.image.tag
     imagePullPolicy: Always
@@ -44,6 +55,9 @@ spec:
       value: "eirini-persi-svc"
     - name: OPERATOR_WEBHOOK_NAMESPACE
       value: "eirini"
+    volumeMounts:
+      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+        name: register-secret-volume
   tolerations:
   - effect: NoExecute
     key: node.kubernetes.io/not-ready
