Use the current git tag (or master) to decide which container image to kapp deploy
[#171988503](https://www.pivotaltracker.com/story/show/171988503)

Co-authored-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Dennis Leon <leonde@vmware.com>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -26,10 +26,11 @@ push-local-image-source:
 	docker tag cfpersi/smb-broker-source localhost:5000/cfpersi/smb-broker-source:latest && \
 	docker push localhost:5000/cfpersi/smb-broker-source:latest
 
+tag	:=	"$(shell (git symbolic-ref -q --short HEAD || git describe --tags --exact-match) | sed 's/master/latest/')"
 kapp: SHELL=/bin/bash
 kapp:
 	kubectl get namespace cf-workloads || kubectl create namespace cf-workloads
-	kapp deploy -y -a smb-broker -f <(ytt -f ytt/ -v smbBrokerUsername=foo -v smbBrokerPassword=foo)
+	kapp deploy -y -a smb-broker -f <(ytt -f ytt/ -v smbBrokerUsername=foo -v smbBrokerPassword=foo -v image.tag=$(tag))
 
 fly:
 	fly -t persi execute --tag=kind -c $$HOME/workspace/smb-volume-k8s-release/smb-broker/ci/unit-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release -p
