Use the current tag (or latest) when kapp deploying the driver
[#171988503](https://www.pivotaltracker.com/story/show/171988503)

Co-authored-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Dennis Leon <leonde@vmware.com>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -44,8 +44,9 @@ fly:
 fly-e2e:
 	fly -t persi execute --tag=kind  -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/e2e-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release
 
+tag	:=	"$(shell (git symbolic-ref -q --short HEAD || git describe --tags --exact-match) | sed 's/master/latest/')"
 kapp: SHELL=/bin/bash
 kapp:
-	kapp deploy -y -a smb-csi-driver -f <(ytt -f ytt/base)
+	kapp deploy -y -a smb-csi-driver -f <(ytt -f ytt/base -v image.tag=$(tag))
 
 .PHONY: test fly fly-e2e image-local-registry
