--- a/smb-csi-driver/ytt/base/csi-nodeplugin-smbplugin.yaml
+++ b/smb-csi-driver/ytt/base/csi-nodeplugin-smbplugin.yaml
@@ -54,7 +54,7 @@ spec:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
           image: #@ data.values.image.repository + ":" + data.values.image.tag
-          command: ["/layers/org.cloudfoundry.go-mod/app-binary/bin/smb-csi-driver"]
+          command: ["/app/main"]
           args :
             - "--nodeid=$(NODE_ID)"
             - "--endpoint=$(CSI_ENDPOINT)"
