Extract the command as a variable so we can override for prod and for test
Co-authored-by: Paul Warren <pwarren@pivotal.io>
Co-authored-by: Lisa Burns <lcho@pivotal.io>

--- a/smb-csi-driver/ytt/base/csi-nodeplugin-smbplugin.yaml
+++ b/smb-csi-driver/ytt/base/csi-nodeplugin-smbplugin.yaml
@@ -54,7 +54,8 @@ spec:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
           image: #@ data.values.image.repository + ":" + data.values.image.tag
-          command: ["/app/main"]
+          command:
+          - #@ data.values.command
           args :
             - "--nodeid=$(NODE_ID)"
             - "--endpoint=$(CSI_ENDPOINT)"
