--- a/smb-csi-driver/ytt/test.yaml
+++ b/smb-csi-driver/ytt/test.yaml
@@ -3,3 +3,4 @@
 image:
   repository: registry:5000/cfpersi/smb-plugin
   tag: local-test
+command: "/layers/org.cloudfoundry.go-mod/app-binary/bin/smb-csi-driver"
