Move to a generate-on-demand workflow for our fakes
- to ensure we are using a known and current counterfeiter everywhere

[#171943808](https://www.pivotaltracker.com/story/show/171943808)

Authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -8,7 +8,10 @@ install:
 
 test:
 	@$(MAKE) -f $(THIS_FILE) image-local-registry
-	ulimit -n 10000 && ulimit -a && GO111MODULE=off go get github.com/onsi/ginkgo/ginkgo && GO111MODULE=on ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1
+	ulimit -n 10000 && ulimit -a && \
+	GO111MODULE=off go get github.com/onsi/ginkgo/ginkgo && \
+	GO111MODULE=on go generate ./... && \
+	GO111MODULE=on ginkgo -v -r -keepGoing -trace -randomizeAllSpecs -progress --nodes=1
 
 fmt:
 	go fmt ./...
