Deploy broker and csidriver into cf-smb namespace
- The target namespace where pvs and pvcs are created is still
  cf-workloads
- Some resources such as roles, rolebindings must also be in
  cf-workloads
  [#171885272](https://www.pivotaltracker.com/story/show/171885272)

Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-broker/Makefile
+++ b/smb-broker/Makefile
@@ -28,6 +28,7 @@ tag	:=	"$(shell (git symbolic-ref -q --short HEAD || git describe --tags --exact
 kapp: SHELL=/bin/bash
 kapp:
 	kubectl get namespace cf-workloads || kubectl create namespace cf-workloads
+	kubectl get namespace cf-smb || kubectl create namespace cf-smb
 	kapp deploy -y -a smb-broker -f <(ytt -f ytt/ -v smbBrokerUsername=foo -v smbBrokerPassword=foo -v image.tag=$(tag))
 
 fly:
