Rename the smb-k8s-kind-tests docker image
[#172272424](https://www.pivotaltracker.com/story/show/172272424)

Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/ci/integration-tests.yml
+++ b/ci/integration-tests.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: cfpersi/smb-k8s-kind
+    repository: cfpersi/smb-k8s-kind-tests
     tag: latest
 
 inputs:
