Use the paketo go buildpack, not the cf go buildpack
Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-broker/ci/extract-version.yml
+++ b/smb-broker/ci/extract-version.yml
@@ -9,7 +9,7 @@ image_resource:
 
 inputs:
   - name: smb-volume-k8s-release
-  - name: cf-acceptance-tests
+  - name: cf-volume-services-acceptance-tests
 
 outputs:
   - name: go-version
