Specify the paketo binary path, not the cf binary path
- in lieu of use the real launcher path

Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Paul Warren <pwarren@pivotal.io>

--- a/smb-csi-driver/ytt/test.yaml
+++ b/smb-csi-driver/ytt/test.yaml
@@ -3,4 +3,4 @@
 image:
   repository: registry:5000/cfpersi/smb-plugin
   tag: local-test
-command: "/layers/org.cloudfoundry.go-mod/app-binary/bin/smb-csi-driver"
+command: "/layers/paketo-buildpacks_go-mod/app-binary/bin/smb-csi-driver"
