--- a/smb-broker/kpack/image.yml
+++ b/smb-broker/kpack/image.yml
@@ -1,13 +1,18 @@
-source:
-  git:
-    url: https://github.com/cloudfoundry/smb-volume-k8s-release.git
-    revision: master
-  subPath: "smb-broker"
-build:
-  env:
-namespace: cf-volume-services
-image:
+apiVersion: build.pivotal.io/v1alpha1
+kind: Image
+metadata:
+  name: smb-broker-kpack-image
+  namespace: cf-volume-services
+spec:
   tag: cfpersi/deletemebroker3
-builder:
-  name: cf-volume-services
-  scope: Project
+  serviceAccount: default
+  cacheSize: "1.5Gi"
+  builder:
+    namespace: cf-volume-services
+    name: cf-volume-services
+    kind: CustomBuilder
+  source:
+    git:
+      url: https://github.com/cloudfoundry/smb-volume-k8s-release.git
+      revision: master
+    subPath: "smb-broker"
