Do not deploy an ingress by default for smbbroker
[#172388934](https://www.pivotaltracker.com/story/show/172388934)
Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>

--- a/smb-broker/ytt/ingress.yaml
+++ b/smb-broker/ytt/ingress.yaml
@@ -1,6 +1,6 @@
 #@ load("@ytt:data", "data")
 
-#@ if/end data.values.ingress.enabled:
+#@ if data.values.ingress.enabled:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -21,3 +21,4 @@ spec:
               servicePort: http
           #@ end
   #@ end
+#@ end
