Use make dependencies to invoke dependent targets instead of calling make recursively.
Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -26,17 +26,13 @@ start-docker:
 kill-docker:
 	pkill dockerd
 
-test:
-	@$(MAKE) -f $(THIS_FILE) vet
-	@$(MAKE) -f $(THIS_FILE) fakes
-	@$(MAKE) -f $(THIS_FILE) build
+test: vet fakes build
 	go get github.com/onsi/ginkgo/ginkgo
 	cd identityserver && ginkgo -race .
 	cd nodeserver && ginkgo -race .
 
 e2e: SHELL:=/bin/bash
-e2e:
-	@$(MAKE) -f $(THIS_FILE) image-local-registry
+e2e: image-local-registry
 	go get github.com/onsi/ginkgo/ginkgo
 	ginkgo -r -focus "CSI Volumes|CSIDriver"
 
