Stop compiling unit tests in the e2e target so that we don't need unit fake source code.
[#172463320](https://www.pivotaltracker.com/story/show/172463320)

Co-authored-by: Lisa Burns <lcho@pivotal.io>
Co-authored-by: Julian Hjortshoj <jhjortshoj@pivotal.io>

--- a/smb-csi-driver/Makefile
+++ b/smb-csi-driver/Makefile
@@ -34,7 +34,7 @@ test: vet fakes build
 e2e: SHELL:=/bin/bash
 e2e: image-local-registry
 	go get github.com/onsi/ginkgo/ginkgo
-	ginkgo -r -focus "CSI Volumes|CSIDriver"
+	ginkgo .
 
 fly:
 	fly -t persi execute --tag=kind  -p -c ~/workspace/smb-volume-k8s-release/smb-csi-driver/ci/unit-tests.yml -i smb-volume-k8s-release=$$HOME/workspace/smb-volume-k8s-release
