Output tarball of csi driver image after unit tests
[#172236339](https://www.pivotaltracker.com/story/show/172236339)

Authored-by: Lisa Cho <lcho@pivotal.io>

--- a/smb-csi-driver/ci/unit-tests.yml
+++ b/smb-csi-driver/ci/unit-tests.yml
@@ -13,3 +13,6 @@ inputs:
 run:
   path: make
   args: [ "--keep-going", "--directory=smb-volume-k8s-release/smb-csi-driver", "test"]
+
+params:
+  IMAGE_DESTINATION: "../../built-images/smb-csi-driver.tgz"
